# himalaya

./: .buildinfo  .codecov.yml  .codespellrc  .gitignore  .travis.yml  LICENSE.md  README.md  README.rst  api.html  changelog.html  flowchart.html  genindex.html  getting_started.html  index.html  models.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  troubleshooting.html
_auto_examples/: index.html  sg_execution_times.html
_generated/: himalaya.backend.ALL_BACKENDS.html  himalaya.backend.get_backend.html  himalaya.backend.set_backend.html  himalaya.kernel_ridge.ColumnKernelizer.html  himalaya.kernel_ridge.KERNEL_RIDGE_SOLVERS.html  himalaya.kernel_ridge.KernelCenterer.html  himalaya.kernel_ridge.KernelRidge.html  himalaya.kernel_ridge.KernelRidgeCV.html  himalaya.kernel_ridge.Kernelizer.html  himalaya.kernel_ridge.MULTIPLE_KERNEL_RIDGE_SOLVERS.html  himalaya.kernel_ridge.MultipleKernelRidgeCV.html  himalaya.kernel_ridge.PAIRWISE_KERNEL_FUNCTIONS.html  himalaya.kernel_ridge.WEIGHTED_KERNEL_RIDGE_SOLVERS.html  himalaya.kernel_ridge.WeightedKernelRidge.html  himalaya.kernel_ridge.cosine_similarity_kernel.html  himalaya.kernel_ridge.generate_dirichlet_samples.html  himalaya.kernel_ridge.linear_kernel.html  himalaya.kernel_ridge.make_column_kernelizer.html  himalaya.kernel_ridge.polynomial_kernel.html  himalaya.kernel_ridge.predict_and_score_weighted_kernel_ridge.html  himalaya.kernel_ridge.predict_weighted_kernel_ridge.html  himalaya.kernel_ridge.primal_weights_kernel_ridge.html  himalaya.progress_bar.bar.html  (+38 more)
(+257 files in other folders)
